--- a/config-client.properties
+++ b/config-client.properties
@@ -1,5 +1,5 @@
 rose.config=wwww.kjpl.com
-rose.version=1.0
-rose.url=www.baidu.com
+rose.version=2.0
+rose.url=www.kjpl.com
 rose.contentPath=demoTest
 rose.uploadPath=/baseidr
